Fix banner not being behind image-tags

--- a/styles/sheets/actors/traveler.css
+++ b/styles/sheets/actors/traveler.css
@@ -77,6 +77,7 @@
       opacity: .35;
       pointer-events: none;
       aspect-ratio: 3 / 1;
+      z-index: -1;
     }
   }
 
